Layout created with fixed Navbar and overflow issue fixing solution updated!

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,3 @@ body {
     font-family: 'Poppins', sans-serif;
     /* font-family: 'Poppins', sans-serif !important; */
 }
-
-.app {
-    overflow: hidden;
-}
